<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <com.compose.myapplication.PuzzleSurface
        android:id="@+id/puzzle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/continue_desc"
        android:text="@string/next_image"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/devartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/deviantart_link_desc"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/wordpressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/wordpress_link_desc"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/saveImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/save_image_button"
        android:src="@mipmap/ic_launcher"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/saveMusicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/save_music_button"
        android:src="@mipmap/ic_launcher"
        android:visibility="invisible" />

    <TextView
        android:background="@color/white"
        android:textColor="@color/black"
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/nextButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:textSize="28sp"
        android:padding="5dp"
        android:textStyle="bold" />
</RelativeLayout>