<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".SecondFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9fc7ff"
        android:padding="10dp"
        android:textSize="20sp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        tools:ignore="ScrollViewSize">

        <TableRow
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/puzzlesSolvedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/puzzles_solved" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/puzzlesSolvedCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="right"
                android:text="@string/zero" />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView2x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_x_puzzles_solved" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/twoXtwoPuzzlesSolvedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/zero" />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/two_x_two_record_solve_time" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/twoXtwoSolveTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="right"
                android:text="@string/zero" />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_x_three_puzzles_solved" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/threeXthreePuzzlesSolvedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/zero" />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/three_x_three_record_solve_time" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/threeXthreeSolveTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="right"
                android:text="@string/zero" />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_x_four_puzzles_solved" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/fourXfourPuzzlesSolvedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/four_x_four_record_solve_time" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/fourXfourSolveTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_x_five_puzzles_solved" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/fiveXfivePuzzlesSolvedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/five_x_five_record_solve_time" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/fiveXfiveSolveTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_x_six_puzzles_solved" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/sixXsixPuzzlesSolvedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/six_x_six_record_solve_time" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/sixXsixSolveTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven_x_seven_puzzles_solved" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/sevenXsevenPuzzlesSovedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/seven_x_seven_record_solve_time" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/sevenXsevenSolveTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/images_saved" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/imageSavedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:text="@string/blog_links_traversed" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/blogLinksTraversedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_links_traversed" />

            <TextView
                android:padding="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:id="@+id/musicSavedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/zero" />
        </TableRow>
    </TableLayout>
</ScrollView>